the user can see his maps shared by other users in the parameters menu the visibility of a map is no longer stored in the map attribute, it is specific to the user

--- a/src/main/webapp/styles/main.css
+++ b/src/main/webapp/styles/main.css
@@ -431,8 +431,15 @@ textarea{
     border-radius: 10px;
     height: 490px;
     width: 330px;
-    left: 15px;
     top: 90px;
+}
+
+.scrollBarRight{
+    left: 15px;
+}
+
+.scrollBarLeft{
+    right:15px;
 }
 
 .Scrollbar{
